Fix price table's horizontal overflow in mobile view

--- a/assets/sass/_content.scss
+++ b/assets/sass/_content.scss
@@ -457,6 +457,9 @@
   @extend %table-data;
   th:not(:first-child) {
     min-width: 100px;
+    @media only screen and (max-width: 480px) {
+      min-width: 64px;
+    }
   }
 }
 
